// 指定proto版本
syntax = "proto3";

// 指定golang包名
option go_package = "gmicro/service/test";

import "base.proto";
import "validate.proto";

// 指定默认包名
package test;

// 定义 lboss 服务
service test {

    // @cat:
    // @name:
    // @desc: 删除文件
    // @error:
    rpc DelFileList (DelFileListReq) returns (DelFileListRsp) {
    };

}
// lboss 150000 - 160000, 20013
enum ErrCode {
    Success = 0;
    ErrFileNotFound = 150001 ;// 文件不存在
}

// 文件表
message ModelFile {
    uint64 id = 1;
    uint32 created_at = 2;
    uint32 updated_at = 3;
    uint32 deleted_at = 4;
    uint64 creator_id = 5;
    int64 size = 6;
    // @desc: 原文件名
    string name = 7;
    // @desc: 文件重命名
    string rename = 8;
    // @desc: 文件路径
    string path = 9;
    // @desc: 存储桶
    string bucket = 10;
    // @desc: 域名
    string domain = 11;
}

message DelFileListReq {
}

message DelFileListRsp {
}
